# repo-sync

./: .gitignore  DECISIONS.md  OPEN-QUESTIONS.md  README.md  TECH-DESIGN.md  VALIDATION.md  generate_jwt.sh  pyproject.toml
.agents/skills/conflict-resolution/: SKILL.md
.agents/skills/pr-description/: SKILL.md
.github/workflows/: approve.yml  escalation.yml  restack.yml  sync.yml
actions/validate-markers/: action.yml
docker/conflict-resolution/: Dockerfile  entrypoint.sh
docker/pr-description/: Dockerfile  entrypoint.sh
docs/: AGENT-FAILURE-HANDLING.md  DECISIONS.md  INTEGRATION-TESTS.md  KNOWN-ISSUES.md  OPEN-QUESTIONS.md  PRD.md  RUNBOOK.md  TECH-DESIGN.md  VALIDATION.md
examples/: consuming-repo-sync.yml
scripts/: bootstrap.sh
src/repo_sync/: errors.py
src/repo_sync/stack/: branches.py  constants.py  gh_ops.py  git_ops.py  lfs.py  loop_detection.py  prs.py  restack.py  reviewer.py  trailers.py  watermark.py
src/repo_sync/strip/: cli.py  detect.py  lfs.py  markers.py  tree.py
src/repo_sync/workflows/: __init__.py  agent.py  approve_logic.py  (+8 more)
tests/: __init__.py  conftest.py  test_branches.py  test_cli.py  test_detect.py  test_gh_ops.py  test_lfs_payload_validation.py  test_loop_detection.py  test_markers.py  test_prs.py  test_restack.py  test_reviewer.py  test_trailers.py  test_tree.py  test_watermark.py
tests/stack/: test_git_ops.py  test_lfs.py
tests/workflows/: test_approve_logic.py  test_descriptions.py  test_escalation.py  test_fixup_script.py  test_lfs_mirroring.py  test_restack_workflow.py  test_sync.py  test_sync_workflow_config.py
