[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-sync"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
repo-sync-strip = "repo_sync.strip.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
